# lerobot-trial

./: .gitignore  CLAUDE.md  LICENSE  README.md  dataflow-demo.yaml  dataflow-eval.yaml  dataflow-record.yaml  mise.toml  pyproject.toml  with_mujoco_on_mac.sh
configs/: example_gym_hil_eval.json  example_gym_hil_record.json
examples/: config_gym_hil_record.json  config_gym_hil_train.json
scripts/: delete_episodes.py  publish_policy.py
src/lerobot_trial/: __init__.py  config.py  dora_ch.py  gym_client.py  gym_hil.py  gym_utils.py  lerobot_control_events.py
src/lerobot_trial/hw_impl/: __init__.py  base_robot.py  base_teleop.py  common.py  gym_hil_evaluator.py  gym_hil_recorder.py
src/nodes/: record_by_lerobot.py  run_gym_hil.py  run_keyboard.py
